--- a/requirements.txt
+++ b/requirements.txt
@@ -51,3 +51,4 @@ typing-extensions==4.13.1; python_version >= '3.8'
 tzdata==2025.2; python_version >= '2'
 urllib3==2.3.0; python_version >= '3.9'
 wordcloud==1.9.4; python_version >= '3.7'
+reportlab==4.3.1; python_version >= '3.7'
